# DSA

./: princess_permutations.txt
Cvicenia/: CMakeLists.txt  cv1-1_paprika.c  cv1-2_prvocisla.c  cv1-3_dlazdice.c  cv2-1_hrackarstvo.c  cv3-1_bin_strom.c  cv3-2_pocet_bin_stromov.c  cv3-3.c  testing.c  tetsingCode.c  ul1-1.c  ul1-2.c  ul2-1.c  ul2-2.c  ul3-3.c
Zadania/: CMakeLists.txt  DSAzadanie1-1.c  DSAzadanie1-2.c  DSAzadanie1.c  testingLanguageC.c
Zadania/Zadanie1/: Dokumentacia_zadanie1.docx  README.md  malloc_vstupy.txt  readme.txt  testovanie_malloc.c  testovanie_z1.c  zadanie1.c  zadanie1_L.c  zadanie1_S.c  zadanie1_xrichnakova.rar
Zadania/Zadanie2/: AVL_tree_struct.c  CMakeLists.txt  main.c  my_AVL_tree.c  my_bvs.c  my_hash.c  not_my_hash.c  original_trees_main.c  output.txt  output_excel.py  print_tree.c  red-black_tree.c  testovanie.c  testovanie.xlsx  testovanie2.xlsx  tetsing.c  xrichnakova_DSA_dokumentacia_zadanie2.docx  xrichnakova_zadanie2.rar
Zadania/Zadanie2/Testovanie/: test1.c
Zadania/Zadanie2/Testovanie/Testovanie_hash/: test1.txt  test10.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
Zadania/Zadanie2/Testovanie/Tetsovanie_stromov/: test1.txt  test10.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
Zadania/Zadanie3/: .gitignore  mapa.txt  new_popolvar.c  tempCodeRunnerFile.c  test.txt  test_popolvar.c  testing2.c  xrichnakova_DSA_dokumentacia_zadanie3.docx  xrichnakova_popolvar.c  zadanie3.c
Zadania/z3/: CMakeLists.txt  main.c
