cmake_minimum_required(VERSION 3.14)
project(Cvicenia C)

set(CMAKE_C_STANDARD 99)
add_executable(cv1_paprika cv1-1_paprika.c)
add_executable(cv2_prvocisla cv1-2_prvocisla.c)
add_executable(cv1.3_dlazdice cv1-3_dlazdice.c)
add_executable(cv2-1_hrackarstvo cv2-1_hrackarstvo.c)
add_executable(tetsingCode tetsingCode.c)
add_executable(cv3-1_bin_strom cv3-1_bin_strom.c)
add_executable(cv3-2_pocet_bin_stromov cv3-2_pocet_bin_stromov.c)